--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Mei</title>
 		<meta charset="utf-8" />
+		<meta name="baidu-site-verification" content="codeva-wdeza6cIDh" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- 网站图标-->
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
