--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<!-- Blog -->
 				<article id="blog">
 					<h2 class="major">Blog</h2>
-					<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image main"><img src="images/blog_pictrue.jpg" alt="" /></span>
 					<p><a href="https://blog.ovomei.top" alt="">Blog</a>使用的是Hexo+github搭建的，用来记录一些生活和学习笔记之类的，目前还在搭建中......</p>
 				</article>
 
